--- a/creditcardguide/src/main/res/values/strings.xml
+++ b/creditcardguide/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="choose_flag">Choose a credit card flag</string>
     <string name="nubank">Nubank</string>
     <string name="paypal">Paypal</string>
+    <string name="discover">Discover</string>
 </resources>
