--- a/creditcardguide/src/main/res/values/strings.xml
+++ b/creditcardguide/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="nubank">Nubank</string>
     <string name="paypal">Paypal</string>
     <string name="discover">Discover</string>
+    <string name="jcb">JCB</string>
 </resources>
